fix misaligned numbers

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -292,7 +292,7 @@ blockquote p {
 pre {
     border-radius: 3px;
     overflow-wrap: break-word;
-    overflow-x: auto;
+    /* overflow-x: auto; */
     text-align: left;
 }
 
@@ -451,6 +451,10 @@ li > code {
 .chroma {
     padding: 0.5rem 0.25rem;
     margin: 0;
+}
+.chroma .line,
+.chroma .lnt {
+    display:block;
 }
 
 .chroma .hl {
